# crosscall

./: .gitignore  LICENSE  README.md  generate.sh  publish.sh
crossc/: Cargo.toml
crossc/src/: main.rs
dart/: README.md  pubspec.yaml
dart/ios/: rinf.podspec
dart/lib/: crosscall.dart
dart/lib/src/protocol/: protocol.pb.dart  protocol.pbenum.dart  protocol.pbjson.dart  protocol.pbserver.dart
dart/linux/: CMakeLists.txt  rust.cmake
dart/macos/: rinf.podspec
dart/src/: CMakeLists.txt
dart/windows/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: lib.rs  protocol.rs
transport/: protocol.proto
