[package]
name = "crosscall"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "dart and rust ffi call"
repository = "https://github.com/Zhou-Pixel/crosscall.git"

[dependencies]
allo-isolate = { version = ">=0.1.25", features = ["zero-copy"] }
parking_lot = "0.12"
prost = "0.13"
tokio = { version = "1.39", features = ["sync", "rt", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
